sample-ingress-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world
  namespace: workloads
spec:
  selector:
    matchLabels:
      app: hello-world
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
      - name: hello-world
        image: mcr.microsoft.com/dotnet/samples:aspnetapp
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  namespace: workloads
spec:
  selector:
    app: hello-world
  ports:
  - port: 80
    name: http
    targetPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: workloads
  name: hello-world
spec:
  tls:
  - hosts:
    - sample.taha.dev
    secretName: nginx-tls
  ingressClassName: nginx
  rules:
  - host: sample.taha.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: hello-world
            port: 
              number: 80
